--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     <body>
         <div class="sidenav text-center">
             <div class="side_top">
-                <img src="images/about.jpg" alt="news image" class="img-fluid navimg">
-                <h1 class="top_hd mt-2"><a href="index.html">Cao Anh Tuấn</a></h1>
+                <a href="">
+                	<img src="images/avatar.jpg" alt="news image" class="img-fluid navimg" style="max-width: 100px;">
+                </a>
+                <h1 class="top_hd mt-2"><a href="">Cao Anh Tuấn</a></h1>
                 <p class="top_hdp mt-2">Designer Production</p>
             </div>
             <!-- header -->
